Display the year in the blog loop on all but XS screens

--- a/assets/css/blog/feed.css
+++ b/assets/css/blog/feed.css
@@ -53,6 +53,16 @@
     white-space: nowrap;
 }
 
+@media (max-width: 767px) {
+    .feed-title {
+        font-size: 1.3rem;
+    }
+
+    .feed-length {
+        font-size: 1.3rem;
+    }
+}
+
 .feed-right {
     display: flex;
     align-items: center;
