--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -3,8 +3,11 @@
         <div class="feed-calendar-month">
             {{date published_at format="MMM"}}
         </div>
-        <div class="feed-calendar-day">
+        <div class="feed-calendar-month">
             {{date published_at format="DD"}}
+        </div>
+        <div class="feed-calendar-day hidden-xs">
+            {{date published_at format="YYYY"}}
         </div>
     </div>
     <h2 class="feed-title">{{title}}</h2>
