Add syntax highlighting with prism

--- a/default.hbs
+++ b/default.hbs
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{meta_title}}</title>
+    <link rel="stylesheet" href="https://monicao.s3.amazonaws.com/blog/scripts/prism.css" />
     <link rel="stylesheet" href="{{asset "built/screen.css"}}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:400,400i,700,700i,800">
 
@@ -52,6 +53,7 @@
         crossorigin="anonymous">
     </script>
     <script src="{{asset "built/main.min.js"}}"></script>
+    <script src="https://monicao.s3.amazonaws.com/blog/scripts/prism-1.22.0.min.js"></script>
 
     {{ghost_foot}}
 </body>
