--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -2,7 +2,8 @@
     <div class="header-left">
         <a class="logo" href="{{@site.url}}">
             {{#if @site.logo}}
-                <img class="logo-image" src="{{@site.logo}}" alt="{{@site.title}}">
+                <img class="logo-image dark" src="https://monicao.s3.amazonaws.com/blog/logo_dark.png" alt="{{@site.title}}">
+                <img class="logo-image white" src="https://monicao.s3.amazonaws.com/blog/logo_white.png" alt="{{@site.title}}">
             {{else}}
                 <span class="logo-text">{{@site.title}}</span>
             {{/if}}
