--- a/assets/css/blog/code.css
+++ b/assets/css/blog/code.css
@@ -1,3 +1,6 @@
+code {
+    font-size: 0.8em;
+}
 code[class*="language-"], pre[class*="language-"] {
     font-size: 0.8em;
     text-shadow: none;
